--- a/HousesApi/HousesApi.csproj
+++ b/HousesApi/HousesApi.csproj
@@ -34,4 +34,7 @@
     <Folder Include="Models\" />
     <Folder Include="Controllers\" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Remove="appsettings.Development.json" />
+  </ItemGroup>
 </Project>
